# BPNN_CL

./: .directory  .gitignore  CMakeLists.txt  errSets  horizontalAnalyzer.py  main.cpp  nn_mlp_singlehiddenlayer.cl  nn_mlp_singlehiddenlayer.cpp  nn_mlp_singlehiddenlayer.h  nncl.kdev4  plotter.py  sigmoid.cl
